--- a/css/styles.css
+++ b/css/styles.css
@@ -215,12 +215,21 @@ header {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
 
+  opacity: 1;
+  visibility: visible;
+
+  transition: opacity 250ms;
+
   z-index: 1;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -234,7 +243,6 @@ header {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -260,6 +268,8 @@ header {
 
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
+
+  cursor: pointer;
 }
 
 /*features*/
@@ -607,7 +617,6 @@ header {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: 70px;
 }
 
 .social-list .social + .social {
@@ -627,7 +636,7 @@ header {
 
 .current::after {
   position: absolute;
-  bottom: 0px;
+  bottom: -1px;
   right: 0px;
   content: "";
   width: 100%;
@@ -722,7 +731,7 @@ header {
   color: var(--title-text-color);
   background-color: var(--primary-bg-color);
 
-  transition-property: color, background-color;
+  transition-property: color, box-shadow, background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -877,14 +886,9 @@ header {
   border-radius: 4px;
   cursor: pointer;
 
-  transition-property: color;
+  transition-property: color, border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.customers-icon:hover,
-.customers-icon:focus {
-  color: var(--accent-color);
 }
 
 .current-position::before {
